2009-03-17  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* configure.ac:
	Started working on 0.90.1.

2009-03-17  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* TODO:
	* src/murrine_draw.c (murrine_draw_scrollbar_slider):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_scrollbar_slider):
	Fixed the rendering bug on the scrollbar's slider by reducing the 
	roundness of the clipped area.

2009-03-17  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_style.c (murrine_style_draw_box):
	Removed shadows from comboboxentry's button.
	Feedback is appreciated.

2009-03-17  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_style.c (murrine_style_draw_box):
	Changed params.active heuristic for toggle button, I should ask benzea 
	for more info.

2009-03-16  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* configure.ac:
	Ops 0.90.0 not 0.90.

2009-03-16  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* configure.ac:
	* src/cairo-support.c:
	* src/cairo-support.h:
	* src/murrine_draw.c (murrine_draw_button), (murrine_draw_entry):
	Renamed 0.90, removed set_border_gradient for this release.

2009-03-10  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/cairo-support.c (murrine_set_gradient),
	(murrine_set_border_gradient):
	* src/cairo-support.h:
	* src/murrine_draw.c (murrine_draw_button), (murrine_draw_entry),
	(murrine_draw_entry_progress), (murrine_register_style_murrine):
	* src/murrine_style.c (murrine_style_draw_box):
	* src/murrine_types.h:
	Two interesting things:
	1) Added set_border_gradient, useful in the future but not enabled yet
	2) Draw the entry progressbar, since GTK+ 2.16.0

2009-02-22  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_checkbox),
	(murrine_draw_classic_focus), (murrine_draw_focus):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_checkbox),
	(murrine_rgba_draw_menu_frame):
	Small change in rgba rounded menus, updated previous
	ChangeLog entry.

2009-02-22  Andrea Cimitan  <andrea.cimitan@gmail.com>
